style: BusiPrdOrdServiceImpl 中 new Double(0) 改为 Double.valueOf(0)